--- a/2065697_DhirajKumarSahKanu_ClassificationWithLogisticRegression.ipynb
+++ b/2065697_DhirajKumarSahKanu_ClassificationWithLogisticRegression.ipynb
@@ -4333,12 +4333,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LFnuByB5JcoY"
       },
       "source": [
-        "## 6. Conclusion [1]\n",
+        "## 6. Conclusion\n",
         "Conclude the result of the comparison. "
       ]
     },
